@@ -2,14 +2,19 @@ package com.start.pawpal_finder;
 
 import com.start.pawpal_finder.dto.*;
 import com.start.pawpal_finder.entity.*;
+import com.start.pawpal_finder.representation.PricingModel;
 import com.start.pawpal_finder.service.AnimalService;
 import com.start.pawpal_finder.service.PetOwnerService;
 import com.start.pawpal_finder.service.PetSitterService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Component
@@ -19,7 +24,11 @@ public class Transformer {
     private final PetSitterService petSitterService;
     private final AnimalService animalService;
 
-    @Autowired
+    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ISO_LOCAL_DATE;
+    private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ISO_LOCAL_TIME;
+    private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ISO_LOCAL_DATE_TIME;
+
+
     public Transformer(PetOwnerService petOwnerService, PetSitterService petSitterService, AnimalService animalService) {
 
         this.petOwnerService = petOwnerService;
@@ -75,7 +84,6 @@ public class Transformer {
         dto.setCounty(entity.getCounty());
         dto.setPhoneNumber(entity.getPhoneNumber());
         dto.setBirthDate(entity.getBirthDate());
-        dto.setAdmin(entity.getAdmin());
         return dto;
     }
 
@@ -93,7 +101,6 @@ public class Transformer {
         entity.setCounty(dto.getCounty());
         entity.setPhoneNumber(dto.getPhoneNumber());
         entity.setBirthDate(dto.getBirthDate());
-        entity.setAdmin(dto.getAdmin());
         return entity;
     }
 
@@ -149,11 +156,11 @@ public class Transformer {
                 post.getTasks().stream().map(Transformer::toDto).toList(),
                 post.getStatus(),
                 post.getNotes(),
-                post.getAnimals().stream().map(Transformer::toDto).collect(Collectors.toList())
+                post.getAnimals().stream().map(Transformer::toDto).collect(Collectors.toSet())
         );
     }
 
-    public static PostEntity fromDto(PostDto dto, PetOwnerEntity petOwner, List<AnimalEntity> animals) {
+    public static PostEntity fromDto(PostDto dto, PetOwnerEntity petOwner, Set<AnimalEntity> animals) {
         List<TaskEntity> taskEntities = dto.getTasks() != null
                 ? dto.getTasks().stream()
                 .map(task -> new TaskEntity(null, task.getTask(), null))
@@ -196,6 +203,12 @@ public class Transformer {
     }
 
     public static PostSitterDto toDto(PostSitterEntity entity, List<PostSitterAvailabilityEntity> availability) {
+        List<PostSitterAvailabilityDto> availabilityDtos =
+                entity.getAvailabilities() == null ? Collections.emptyList() :
+                        entity.getAvailabilities().stream()
+                                .map(av -> new PostSitterAvailabilityDto(av.getDayOfWeek(), av.getStartTime(), av.getEndTime()))
+                                .collect(Collectors.toList());
+
         return new PostSitterDto(
                 entity.getId(),
                 entity.getPetSitter().getId(),
@@ -203,9 +216,11 @@ public class Transformer {
                 entity.getStatus(),
                 entity.getPostDate(),
                 entity.getTasks(),
-                availability.stream()
-                        .map(Transformer::toDto)
-                        .collect(Collectors.toList())
+                availabilityDtos,
+                entity.getPricingModel().toString(),
+                entity.getRatePerHour(),
+                entity.getRatePerDay(),
+                entity.getFlatRate()
         );
     }
 
@@ -216,14 +231,16 @@ public class Transformer {
         entity.setStatus(dto.getStatus());
         entity.setPostDate(dto.getPostDate());
         entity.setTasks(dto.getTasks());
+        entity.setPricingModel(PricingModel.valueOf(dto.getPricingModel()));
+        entity.setRatePerHour(dto.getRatePerHour());
+        entity.setRatePerDay(dto.getRatePerDay());
+        entity.setFlatRate(dto.getFlatRate());
 
-        if (!dto.getAvailability().isEmpty()) {
-            entity.setAvailabilityStart(dto.getAvailability().getFirst().getStartTime());
-            entity.setAvailabilityEnd(dto.getAvailability().getLast().getEndTime());
+        if (dto.getAvailability() != null && !dto.getAvailability().isEmpty()) {
+            entity.setAvailabilityStart(dto.getAvailability().get(0).getStartTime());
+            entity.setAvailabilityEnd(dto.getAvailability().get(dto.getAvailability().size() - 1).getEndTime());
         }
-
         entity.setPetSitter(petSitter);
-
         return entity;
     }
 
@@ -241,6 +258,202 @@ public class Transformer {
         entity.setDayOfWeek(dto.getDayOfWeek());
         entity.setStartTime(dto.getStartTime());
         entity.setEndTime(dto.getEndTime());
+        return entity;
+    }
+
+    public static PetOwnerProfileDto toDto(PetOwnerProfileEntity profile) {
+        return new PetOwnerProfileDto(
+                profile.getId(),
+                profile.getPetOwner().getId(),
+                profile.getPetOwner().getFirstName(),
+                profile.getPetOwner().getLastName(),
+                profile.getPetOwner().getEmail(),
+                profile.getPetOwner().getCity(),
+                profile.getPetOwner().getCounty(),
+                profile.getPetOwner().getPhoneNumber(),
+
+                profile.getProfilePictureUrl() != null
+                        ? "data:image/jpeg;base64," + Base64.getEncoder().encodeToString(profile.getProfilePictureUrl())
+                        : null,
+                profile.getBudget(),
+                profile.getBio(),
+                profile.getNotificationsEnabled(),
+                profile.getPreferredPaymentMethod(),
+                profile.getStreet(),
+                profile.getStreetNumber(),
+                profile.getLatitude(),
+                profile.getLongitude()
+        );
+    }
+
+
+    public static PetOwnerProfileEntity fromDto(PetOwnerProfileDto dto, PetOwnerEntity petOwner) {
+        return new PetOwnerProfileEntity(
+                dto.getId(),
+                petOwner,
+                dto.getProfilePictureUrl().getBytes(),
+                dto.getBudget(),
+                dto.getBio(),
+                dto.getNotificationsEnabled(),
+                dto.getPreferredPaymentMethod(),
+                dto.getStreet(),
+                dto.getStreetNumber(),
+                dto.getLatitude(),
+                dto.getLongitude()
+        );
+    }
+
+    public static ReviewDto toReviewDto(ReviewEntity e) {
+        ReviewDto dto = new ReviewDto();
+        dto.setId(e.getId());
+        dto.setContent(e.getContent());
+        dto.setRating(e.getRating());
+        dto.setCreatedAt(e.getCreatedAt().toString());
+        dto.setWrittenByRole(e.getWrittenByRole());
+        dto.setWrittenById(e.getWrittenById());
+        dto.setReviewedRole(e.getReviewedRole());
+        dto.setReviewedId(e.getReviewedId());
+        dto.setWrittenByFirstName(e.getWrittenByFirstName());
+        dto.setWrittenByLastName(e.getWrittenByLastName());
+
+        if (e.getReservation() != null) {
+            dto.setReservationId(e.getReservation().getId());
+        } else if (e.getInterestReservation() != null) {
+            dto.setInterestReservationId(e.getInterestReservation().getId());
+        }
+        return dto;
+    }
+
+    public static TimeSlotDto fromEntity(TimeSlotEntity entity) {
+        TimeSlotDto dto = new TimeSlotDto();
+        dto.setId(entity.getId());
+        dto.setStartTime(String.valueOf(LocalDateTime.parse(entity.getStartTime().format(DATE_TIME_FORMATTER))));
+        dto.setEndTime(String.valueOf(LocalDateTime.parse(entity.getEndTime().format(DATE_TIME_FORMATTER))));
+        dto.setStatus(entity.getStatus().toString());
+
+        if (entity.getSitterId() != null) {
+            dto.setSitterId(entity.getSitterId());
+        }
+        dto.setDate(entity.getStartTime().format(DATE_FORMATTER));
+
+        return dto;
+    }
+
+    public static PetSitterProfileDto toDto(PetSitterProfileEntity entity) {
+        PetSitterProfileDto dto = new PetSitterProfileDto();
+        dto.setId(entity.getId());
+        dto.setPetSitterId(entity.getPetSitter().getId());
+        dto.setFirstName(entity.getPetSitter().getFirstName());
+        dto.setLastName(entity.getPetSitter().getLastName());
+        dto.setEmail(entity.getPetSitter().getEmail());
+        dto.setCity(entity.getPetSitter().getCity());
+        dto.setCounty(entity.getPetSitter().getCounty());
+        dto.setPhoneNumber(entity.getPetSitter().getPhoneNumber());
+        dto.setBirthDate(entity.getPetSitter().getBirthDate());
+        dto.setBio(entity.getBio());
+        dto.setNotificationsEnabled(entity.getNotificationsEnabled());
+        dto.setPreferredPaymentMethod(entity.getPreferredPaymentMethod());
+        dto.setExperience(entity.getExperience());
+        dto.setStreet(entity.getStreet());
+        dto.setStreetNumber(entity.getStreetNumber());
+        dto.setLatitude(entity.getLatitude());
+        dto.setLongitude(entity.getLongitude());
+
+        if (entity.getProfilePictureUrl() != null) {
+            dto.setProfilePictureUrl("data:image/jpeg;base64," +
+                    Base64.getEncoder().encodeToString(entity.getProfilePictureUrl()));
+        }
+
+        return dto;
+    }
+
+    public static ReservationDto toDto(ReservationEntity entity) {
+        assert entity.getPetOwner() != null;
+        ReservationDto dto = new ReservationDto(
+                entity.getId(),
+                entity.getPostSitter() != null ? entity.getPostSitter().getId() : null,
+                entity.getPetOwner().getId(),
+                entity.getStatus(),
+                entity.getCreatedAt(),
+                entity.getUpdatedAt(),
+                entity.getFinalPrice(),
+                null,
+                null,
+                null,
+                null,
+                entity.getPetOwner().getFirstName() + " " + entity.getPetOwner().getLastName()
+
+        );
+
+        if (entity.getPostSitter() != null) {
+            dto.setPostDescription(entity.getPostSitter().getDescription());
+            dto.setAvailabilityStart(String.valueOf(entity.getPostSitter().getAvailabilityStart()));
+            dto.setAvailabilityEnd(String.valueOf(entity.getPostSitter().getAvailabilityEnd()));
+            if (entity.getPostSitter().getPetSitter() != null) {
+                String petSitterName = entity.getPostSitter().getPetSitter().getFirstName() + " "
+                        + entity.getPostSitter().getPetSitter().getLastName();
+                dto.setPetSitterName(petSitterName);
+            }
+        }
+
+        return dto;
+    }
+
+
+    public static ReservationEntity toEntity(ReservationDto dto) {
+        ReservationEntity entity = new ReservationEntity();
+        entity.setId(dto.getId());
+
+        if (dto.getPostSitterId() != null) {
+            PostSitterEntity postSitter = new PostSitterEntity();
+            postSitter.setId(dto.getPostSitterId());
+            entity.setPostSitter(postSitter);
+        }
+        if (dto.getPetOwnerId() != null) {
+            PetOwnerEntity petOwner = new PetOwnerEntity();
+            petOwner.setId(dto.getPetOwnerId());
+            entity.setPetOwner(petOwner);
+        }
+        entity.setStatus(dto.getStatus());
+        entity.setCreatedAt(dto.getCreatedAt());
+        entity.setUpdatedAt(dto.getUpdatedAt());
+        entity.setFinalPrice(dto.getFinalPrice());
+        return entity;
+    }
+
+    public static InterestReservationDto toDto(InterestReservationEntity interest) {
+        if (interest == null) {
+            return null;
+        }
+        InterestReservationDto dto = new InterestReservationDto();
+        dto.setId(interest.getId());
+        dto.setPostId(interest.getPost().getId());
+        dto.setPetOwnerId(interest.getPetOwner().getId());
+        dto.setPetSitterId(interest.getPetSitter().getId());
+        dto.setStatus(interest.getStatus());
+        dto.setMessage(interest.getMessage());
+        dto.setCreatedAt(interest.getCreatedAt());
+        dto.setUpdatedAt(interest.getUpdatedAt());
+        dto.setSitterMarkedComplete(interest.isSitterMarkedComplete());
+        dto.setOwnerMarkedComplete(interest.isOwnerMarkedComplete());
+        return dto;
+    }
+
+    public static InterestReservationEntity fromDto(InterestReservationDto dto,
+                                                    PostEntity post,
+                                                    PetOwnerEntity petOwner,
+                                                    PetSitterEntity petSitter) {
+        if (dto == null) return null;
+
+        InterestReservationEntity entity = new InterestReservationEntity();
+        entity.setId(dto.getId());
+        entity.setPost(post);
+        entity.setPetOwner(petOwner);
+        entity.setPetSitter(petSitter);
+        entity.setStatus(dto.getStatus());
+        entity.setMessage(dto.getMessage());
+        entity.setSitterMarkedComplete(dto.isSitterMarkedComplete());
+        entity.setOwnerMarkedComplete(dto.isOwnerMarkedComplete());
         return entity;
     }
 }
